Fix icon wrapping Removed 'service' and 'subservice' from 'reminder' view

--- a/modules/models/Documents/client/Documents.less
+++ b/modules/models/Documents/client/Documents.less
@@ -39,6 +39,7 @@
     overflow: hidden;
     cursor: pointer;
     line-height: 44px;
+    white-space: nowrap;
 }
 
 .expiring-doc {
